--- a/p8105_hw3_ry2417.md
+++ b/p8105_hw3_ry2417.md
@@ -3,3 +3,27 @@ p8105\_hw3\_ry2417
 Ruiqi Yan
 10/12/2021
 
+load the `tidyverse` package and set global options of code chunk and
+figure
+
+``` r
+library(tidyverse)
+
+knitr::opts_chunk$set(
+  warning = FALSE,
+  message = FALSE,
+  fig.width = 6,
+  fig.asp = .6,
+  out.width = "90%"
+)
+
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
+
+options(
+  ggplot2.continuous.colour = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+
+scale_colour_discrete = scale_colour_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
+```
