--- a/p8105_hw3_ry2417.md
+++ b/p8105_hw3_ry2417.md
@@ -3,8 +3,7 @@ p8105\_hw3\_ry2417
 Ruiqi Yan
 10/12/2021
 
-load the `tidyverse` package and set global options of code chunk and
-figure
+load `tidyverse` package and set global options of code chunk and figure
 
 ``` r
 library(tidyverse)
@@ -26,4 +25,10 @@ options(
 
 scale_colour_discrete = scale_colour_viridis_d
 scale_fill_discrete = scale_fill_viridis_d
+```
+
+load `p8105.datasets` package
+
+``` r
+library(p8105.datasets)
 ```
