making some tables based on data

--- a/p8105_hw3_ry2417.md
+++ b/p8105_hw3_ry2417.md
@@ -121,3 +121,86 @@ most_reorder_product <-
   head(10) %>% 
   pull(product_name)
 ```
+
+Some tables generated from data
+
+``` r
+example_obs <-
+  p1_df %>% 
+  head(10) %>% 
+  select(user_id, 
+         order_id, 
+         product_name, 
+         aisle, 
+         department,
+         order_dow,
+         order_hour_of_day
+  ) %>% 
+  head(10) %>% 
+  knitr::kable()
+
+most_popular_product <- 
+  p1_df %>% 
+  group_by(product_name) %>% 
+  distinct(order_id) %>% 
+  summarise(
+    num_product_order = n()
+  ) %>% 
+  arrange(desc(num_product_order)) %>% 
+  head(10) %>% 
+  knitr::kable()
+
+most_popular_product_by_dptm <-
+  p1_df %>% 
+  group_by(department, product_name) %>% 
+  distinct(order_id) %>% 
+  summarise(
+    num_order = n()
+  ) %>% 
+  mutate(
+    product_rank = min_rank(desc(num_order))
+  ) %>% 
+  select(-num_order) %>% 
+  filter(product_rank < 6) %>% 
+  head(40) %>% 
+  pivot_wider(
+    names_from = department,
+    values_from = product_name
+  ) %>% 
+  arrange(product_rank) %>% 
+  knitr::kable()
+
+most_popular_product_by_aisle <-
+  p1_df %>% 
+  filter(aisle %in% c("baking ingredients",
+                      "dog food care",
+                      "packaged vegetables fruits")) %>% 
+  group_by(aisle, product_name) %>% 
+  summarise(
+    num_times = n()
+  ) %>% 
+  mutate(
+    product_rank = min_rank(desc(num_times))
+  ) %>% 
+  filter(product_rank < 4) %>% 
+  arrange(product_rank) %>% 
+  pivot_wider(
+    names_from = product_rank,
+    values_from = c(product_name, num_times),
+    names_glue = "Rank_{product_rank}_{.value}"
+  ) %>% 
+  knitr::kable()
+
+mean_hour_of_day_dow <-
+  p1_df %>% 
+  filter(product_name %in% c("Pink Lady Apples", "Coffee Ice Cream")) %>% 
+  group_by(product_name, order_dow) %>% 
+  summarise(
+    mean_hour_of_day = mean(order_hour_of_day)
+  ) %>% 
+  pivot_wider(
+    names_from = order_dow,
+    values_from = mean_hour_of_day
+  ) %>% 
+  knitr::kable()
+```
