--- a/p8105_hw3_ry2417.md
+++ b/p8105_hw3_ry2417.md
@@ -204,3 +204,72 @@ mean_hour_of_day_dow <-
   ) %>% 
   knitr::kable()
 ```
+
+`instacart`data contains 1384617 observations of 15 variables. The
+variables name are
+`user_id, order_number, product_name, aisle, department, order_id, product_id, add_to_cart_order, reordered, eval_set, order_dow, order_hour_of_day, days_since_prior_order, aisle_id, department_id`.
+There are 131209 users, 131209 orders, 39123 different products, 21
+categories of products and 134 aisles . The categories of products
+include beverages, dairy eggs, household, snacks, breakfast, deli,
+frozen, produce, personal care, canned goods. Most of items were order
+aisles `most_item_aisle`. Here are some examples of observations
+
+| user\_id | order\_id | product\_name                    | aisle                  | department | order\_dow | order\_hour\_of\_day |
+|---------:|----------:|:---------------------------------|:-----------------------|:-----------|:-----------|---------------------:|
+|        1 |   1187899 | Soda                             | soft drinks            | beverages  | Thursday   |                    8 |
+|        1 |   1187899 | Organic String Cheese            | packaged cheese        | dairy eggs | Thursday   |                    8 |
+|        1 |   1187899 | 0% Greek Strained Yogurt         | yogurt                 | dairy eggs | Thursday   |                    8 |
+|        1 |   1187899 | XL Pick-A-Size Paper Towel Rolls | paper goods            | household  | Thursday   |                    8 |
+|        1 |   1187899 | Milk Chocolate Almonds           | candy chocolate        | snacks     | Thursday   |                    8 |
+|        1 |   1187899 | Pistachios                       | nuts seeds dried fruit | snacks     | Thursday   |                    8 |
+|        1 |   1187899 | Cinnamon Toast Crunch            | cereal                 | breakfast  | Thursday   |                    8 |
+|        1 |   1187899 | Aged White Cheddar Popcorn       | popcorn jerky          | snacks     | Thursday   |                    8 |
+|        1 |   1187899 | Organic Whole Milk               | milk                   | dairy eggs | Thursday   |                    8 |
+|        1 |   1187899 | Organic Half & Half              | cream                  | dairy eggs | Thursday   |                    8 |
+
+The products that has most reordering users were Banana, Bag of Organic
+Bananas, Organic Strawberries, Organic Baby Spinach, Organic Avocado,
+Organic Hass Avocado, Large Lemon, Strawberries, Organic Raspberries,
+Limes. Here is the table of the most popular products and the number of
+times being ordered
+
+| product\_name          | num\_product\_order |
+|:-----------------------|--------------------:|
+| Banana                 |               18726 |
+| Bag of Organic Bananas |               15480 |
+| Organic Strawberries   |               10894 |
+| Organic Baby Spinach   |                9784 |
+| Large Lemon            |                8135 |
+| Organic Avocado        |                7409 |
+| Organic Hass Avocado   |                7293 |
+| Strawberries           |                6494 |
+| Limes                  |                6033 |
+| Organic Raspberries    |                5546 |
+
+The three most popular items in each of the aisles “baking ingredients”,
+“dog food care”, and “packaged vegetables fruits” are listed here
+
+| aisle                      | Rank\_1\_product\_name                        | Rank\_2\_product\_name              | Rank\_3\_product\_name | Rank\_1\_num\_times | Rank\_2\_num\_times | Rank\_3\_num\_times |
+|:---------------------------|:----------------------------------------------|:------------------------------------|:-----------------------|--------------------:|--------------------:|--------------------:|
+| baking ingredients         | Light Brown Sugar                             | Pure Baking Soda                    | Cane Sugar             |                 499 |                 387 |                 336 |
+| dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats | Organix Chicken & Brown Rice Recipe | Small Dog Biscuits     |                  30 |                  28 |                  26 |
+| packaged vegetables fruits | Organic Baby Spinach                          | Organic Raspberries                 | Organic Blueberries    |                9784 |                5546 |                4966 |
+
+The most popular items in some departments are shown below
+
+| product\_rank | alcohol            | babies                                           | bakery                                         | beverages                       | breakfast                         | bulk                       | canned goods              | dairy eggs                      |
+|--------------:|:-------------------|:-------------------------------------------------|:-----------------------------------------------|:--------------------------------|:----------------------------------|:---------------------------|:--------------------------|:--------------------------------|
+|             1 | Sauvignon Blanc    | Baby Food Stage 2 Blueberry Pear & Purple Carrot | 100% Whole Wheat Bread                         | Sparkling Water Grapefruit      | Honey Nut Cheerios                | Dried Mango                | Organic Black Beans       | Organic Whole Milk              |
+|             2 | Cabernet Sauvignon | Spinach Peas & Pear Stage 2 Baby Food            | Organic Bread with 21 Whole Grains             | Spring Water                    | Organic Old Fashioned Rolled Oats | Organic Rolled Oats        | No Salt Added Black Beans | Organic Half & Half             |
+|             3 | Beer               | Gluten Free SpongeBob Spinach Littles            | Sourdough Bread                                | Lime Sparkling Water            | Raisin Bran Cereal                | Organic Black Mission Figs | Organic Garbanzo Beans    | Half & Half                     |
+|             4 | Chardonnay         | Free & Clear Unscented Baby Wipes                | Ezekiel 4:9 Bread Organic Sprouted Whole Grain | Sparkling Natural Mineral Water | Cereal                            | Apricots                   | Organic Diced Tomatoes    | Organic Unsweetened Almond Milk |
+|             5 | Vodka              | Broccoli & Apple Stage 2 Baby Food               | Original Nooks & Crannies English Muffins      | Soda                            | Organic Cinnamon Crunch Cereal    | Rolled Oats                | Black Beans               | Unsweetened Almondmilk          |
+
+The day of the week when most orders were placed is Sunday. The table
+showing the mean hour of the day at which Pink Lady Apples and Coffee
+Ice Cream are ordered on each day of the week is
+
+| product\_name    |   Sunday |   Monday |  Tuesday | Wednesday | Thursday |   Friday | Saturday |
+|:-----------------|---------:|---------:|---------:|----------:|---------:|---------:|---------:|
+| Coffee Ice Cream | 13.77419 | 14.31579 | 15.38095 |  15.31818 | 15.21739 | 12.26316 | 13.83333 |
+| Pink Lady Apples | 13.44118 | 11.36000 | 11.70213 |  14.25000 | 11.55172 | 12.78431 | 11.93750 |
