--- a/p8105_hw3_ry2417.md
+++ b/p8105_hw3_ry2417.md
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(
   warning = FALSE,
   message = FALSE,
   fig.width = 6,
-  fig.asp = .6,
+  fig.asp = .7,
   out.width = "90%"
 )
 
@@ -273,3 +273,30 @@ Ice Cream are ordered on each day of the week is
 |:-----------------|---------:|---------:|---------:|----------:|---------:|---------:|---------:|
 | Coffee Ice Cream | 13.77419 | 14.31579 | 15.38095 |  15.31818 | 15.21739 | 12.26316 | 13.83333 |
 | Pink Lady Apples | 13.44118 | 11.36000 | 11.70213 |  14.25000 | 11.55172 | 12.78431 | 11.93750 |
+
+Make a plot that shows the number of items ordered in each aisle,
+limiting this to aisles with more than 10000 items ordered.
+
+``` r
+p1_df %>% 
+  group_by(aisle) %>% 
+  summarise(
+    num_item = n()
+  ) %>% 
+  filter(num_item >= 10000) %>% 
+  ggplot(aes(x = aisle, y = num_item)) +
+  geom_bar(stat = "identity", alpha = 0.5) +
+  labs(x = "aisle name",
+       y = "number of items ordered",
+       title = "The Number of Items Ordered in Each Aisle(>= 10000)",
+       caption = "Data from instacart of p8105_datasets package ") +
+  theme(
+    axis.text.x = element_text(angle = 90, size = 6),
+    axis.text.y = element_text(size = 6),
+    axis.title = element_text(size = 7),
+    plot.title = element_text(size = 7),
+    plot.caption = element_text(size = 4)
+  )
+```
+
+<img src="p8105_hw3_ry2417_files/figure-gfm/problem_1_plot-1.png" width="90%" />
