load and clean data for problem 2

--- a/p8105_hw3_ry2417.md
+++ b/p8105_hw3_ry2417.md
@@ -300,3 +300,34 @@ p1_df %>%
 ```
 
 <img src="p8105_hw3_ry2417_files/figure-gfm/problem_1_plot-1.png" width="90%" />
+
+## Problem 2
+
+load `brfss_smart2010` data
+
+``` r
+data("brfss_smart2010")
+```
+
+clean `brfss_smart2010` data and assign to data frame of problem 2
+
+``` r
+p2_df <- 
+  brfss_smart2010 %>% 
+  janitor::clean_names() %>% 
+  rename(
+    location = locationabbr,
+    location_desc = locationdesc
+  ) %>% 
+  filter(topic == "Overall Health") %>% 
+  mutate(
+    response = factor(response, 
+                      levels = c("Poor", 
+                                 "Fair",
+                                 "Good",
+                                 "Very good",
+                                 "Excellent"),
+                      ordered = TRUE
+                      )
+  )
+```
