--- a/p8105_hw3_ry2417.Rmd
+++ b/p8105_hw3_ry2417.Rmd
@@ -251,3 +251,35 @@ p1_df %>%
   )
 ```
 
+
+## Problem 2
+
+load `brfss_smart2010` data
+
+```{r}
+data("brfss_smart2010")
+```
+
+clean `brfss_smart2010` data and assign to data frame of problem 2
+
+```{r}
+p2_df <- 
+  brfss_smart2010 %>% 
+  janitor::clean_names() %>% 
+  rename(
+    location = locationabbr,
+    location_desc = locationdesc
+  ) %>% 
+  filter(topic == "Overall Health") %>% 
+  mutate(
+    response = factor(response, 
+                      levels = c("Poor", 
+                                 "Fair",
+                                 "Good",
+                                 "Very good",
+                                 "Excellent"),
+                      ordered = TRUE
+                      )
+  )
+```
+
