edit varibales names

--- a/p8105_hw3_ry2417.md
+++ b/p8105_hw3_ry2417.md
@@ -316,8 +316,8 @@ p2_df <-
   brfss_smart2010 %>% 
   janitor::clean_names() %>% 
   rename(
-    location = locationabbr,
-    location_desc = locationdesc
+    state = locationabbr,
+    location = locationdesc
   ) %>% 
   filter(topic == "Overall Health") %>% 
   mutate(
