--- a/p8105_hw3_ry2417.Rmd
+++ b/p8105_hw3_ry2417.Rmd
@@ -284,6 +284,70 @@ p2_df <-
 ```
 
 
+```{r}
+state_7_more_2002 <-
+  p2_df %>% 
+  filter(year == 2002) %>% 
+  group_by(state) %>% 
+  distinct(location) %>% 
+  summarise(num_location = n()) %>% 
+  filter(num_location >= 7) %>% 
+  pull(state)
+
+state_7_more_2010 <-
+  p2_df %>% 
+  filter(year == 2010) %>% 
+  group_by(state) %>% 
+  distinct(location) %>% 
+  summarise(num_location = n()) %>% 
+  filter(num_location >= 7) %>% 
+  pull(state)
+```
+
+In 2002, states that were observed at 7 or more locations are `r state_7_more_2002`. In 2010, states that were observed at 7 or more locations are `r state_7_more_2010`.
+
+Make a “spaghetti” plot of the average data value over time within a state
+
+```{r}
+excellent_df <- 
+  p2_df %>% 
+  filter(response == "Excellent") %>% 
+  group_by(state, year) %>% 
+  summarise(
+    mean_data_value = mean(data_value, na.rm = TRUE)
+  )
+excellent_df %>% 
+  ggplot(aes(x = year, y = mean_data_value, color = state)) +
+  geom_line(alpha = 0.5) +
+  labs(
+    y = "average data value",
+    title = "Average Value over Time within Each States",
+    caption = "Data from BRFSS of p8105_datasets package "
+  ) +
+  theme(
+    plot.caption = element_text(size = 5),
+    legend.key.size = unit(0.4, "cm"),
+    legend.text = element_text(size = 5)
+  ) +
+  guides(color = guide_legend(nrow = 4))
+```
 
 
+Make a two-panel plot showing, for the years 2006, and 2010, distribution of data_value for responses (“Poor” to “Excellent”) among locations in NY State
 
+```{r}
+p2_df %>% 
+  filter(year %in% c(2006, 2010), state == "NY") %>% 
+  ggplot(aes(x = data_value, fill = response)) +
+  geom_density(alpha = .3) +
+  facet_grid(. ~ year) +
+  labs(y = "density of data value",
+       x = "data value",
+    title = "Distribution of Data Value for Reponse among New York State in 2006 vs. 2010",
+    caption = "Data from BRFSS of p8105_datasets package ")+
+  theme(
+    plot.title = element_text(size = 11),
+    plot.caption = element_text(size = 5),
+    legend.key.size = unit(0.4, "cm")
+  )
+```
