--- a/p8105_hw3_ry2417.md
+++ b/p8105_hw3_ry2417.md
@@ -72,6 +72,16 @@ num_product <-
   distinct() %>% 
   nrow()
 
+average_prior_order_day <-
+  p1_df %>% 
+  group_by(user_id) %>% 
+  summarise(
+    prior_order_day = sum(days_since_prior_order)/n()
+  ) %>% 
+  pull(prior_order_day) %>% 
+  mean() %>% 
+  round()
+
 most_order_dow <-
   p1_df %>% 
   group_by(order_dow) %>% 
@@ -265,9 +275,10 @@ The most popular items in some departments are shown below
 |             4 | Chardonnay         | Free & Clear Unscented Baby Wipes                | Ezekiel 4:9 Bread Organic Sprouted Whole Grain | Sparkling Natural Mineral Water | Cereal                            | Apricots                   | Organic Diced Tomatoes    | Organic Unsweetened Almond Milk |
 |             5 | Vodka              | Broccoli & Apple Stage 2 Baby Food               | Original Nooks & Crannies English Muffins      | Soda                            | Organic Cinnamon Crunch Cereal    | Rolled Oats                | Black Beans               | Unsweetened Almondmilk          |
 
-The day of the week when most orders were placed is Sunday. The table
-showing the mean hour of the day at which Pink Lady Apples and Coffee
-Ice Cream are ordered on each day of the week is
+The day of the week when most orders were placed is Sunday. The average
+days since prior order among users are 17 days. The table showing the
+mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are
+ordered on each day of the week is
 
 | product\_name    |   Sunday |   Monday |  Tuesday | Wednesday | Thursday |   Friday | Saturday |
 |:-----------------|---------:|---------:|---------:|----------:|---------:|---------:|---------:|
@@ -398,7 +409,7 @@ p2_df %>%
   labs(y = "density of data value",
        x = "data value",
     title = "Distribution of Data Value for Reponse among New York State in 2006 vs. 2010",
-    caption = "Data from BRFSS of p8105_datasets package ")+
+    caption = "Data from BRFSS of p8105_datasets package ") +
   theme(
     plot.title = element_text(size = 11),
     plot.caption = element_text(size = 5),
