--- a/p8105_hw3_ry2417.md
+++ b/p8105_hw3_ry2417.md
@@ -135,7 +135,7 @@ most_reorder_product <-
 Some tables generated from data
 
 ``` r
-example_obs <-
+example_obs_p1 <-
   p1_df %>% 
   head(10) %>% 
   select(user_id, 
@@ -276,8 +276,8 @@ The most popular items in some departments are shown below
 |             5 | Vodka              | Broccoli & Apple Stage 2 Baby Food               | Original Nooks & Crannies English Muffins      | Soda                            | Organic Cinnamon Crunch Cereal    | Rolled Oats                | Black Beans               | Unsweetened Almondmilk          |
 
 The day of the week when most orders were placed is Sunday. The average
-days since prior order among users are 17 days. The table showing the
-mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are
+days since prior order per user are 17 days. The table showing the mean
+hour of the day at which Pink Lady Apples and Coffee Ice Cream are
 ordered on each day of the week is
 
 | product\_name    |   Sunday |   Monday |  Tuesday | Wednesday | Thursday |   Friday | Saturday |
@@ -425,8 +425,15 @@ import and clean data set for problem 3 from data `accel_data`
 
 ``` r
 p3_df <- 
-  read_csv("data/accel_data.csv") %>% 
+  read_csv(
+    "data/accel_data.csv",
+    col_types = cols(`day_id` = col_factor(ordered = TRUE))
+  ) %>% 
   janitor::clean_names() %>% 
+  rename(
+    day_of_week = day,
+    day = day_id
+  ) %>% 
   pivot_longer( 
     starts_with("activity_"),
     names_to = "minute_of_day",
@@ -438,3 +445,36 @@ p3_df <-
     week_vs_weekend = ifelse(day %in% c("Sunday", "Saturday"), "weekend", "week")
   )
 ```
+
+Some numerical descriptions of data
+
+``` r
+average_activity <-
+  p3_df %>% 
+  pull(activity_in_minute) %>% 
+  mean()
+
+example_obs_p3 <-
+  p3_df %>% 
+  head(10) %>% 
+  knitr::kable()
+```
+
+There are 50400 observations of 6 variables in data. Each observation is
+the observation of one minute collected on a 63 year-old male. The
+variables include week, day, day\_of\_week, minute\_of\_day,
+activity\_in\_minute, week\_vs\_weekend. The average activity count per
+minute is 267.0440592. Here is the examples of some observations
+
+| week | day | day\_of\_week | minute\_of\_day | activity\_in\_minute | week\_vs\_weekend |
+|-----:|:----|:--------------|:----------------|---------------------:|:------------------|
+|    1 | 1   | Friday        | 1               |             88.37778 | week              |
+|    1 | 1   | Friday        | 2               |             82.24444 | week              |
+|    1 | 1   | Friday        | 3               |             64.44444 | week              |
+|    1 | 1   | Friday        | 4               |             70.04444 | week              |
+|    1 | 1   | Friday        | 5               |             75.04444 | week              |
+|    1 | 1   | Friday        | 6               |             66.26667 | week              |
+|    1 | 1   | Friday        | 7               |             53.75556 | week              |
+|    1 | 1   | Friday        | 8               |             47.84444 | week              |
+|    1 | 1   | Friday        | 9               |             55.46667 | week              |
+|    1 | 1   | Friday        | 10              |             42.95556 | week              |
