--- a/p8105_hw3_ry2417.md
+++ b/p8105_hw3_ry2417.md
@@ -19,12 +19,12 @@ knitr::opts_chunk$set(
 theme_set(theme_minimal() + theme(legend.position = "bottom"))
 
 options(
-  ggplot2.continuous.colour = "viridis",
-  ggplot2.continuous.fill = "viridis"
+  ggplot2.continuous.colour = "turbo",
+  ggplot2.continuous.fill = "turbo"
 )
 
-scale_colour_discrete = scale_colour_viridis_d
-scale_fill_discrete = scale_fill_viridis_d
+scale_colour_discrete = scale_colour_viridis_d(option = "turbo")
+scale_fill_discrete = scale_fill_viridis_d(option = "turbo")
 ```
 
 load `p8105.datasets` package
@@ -426,8 +426,7 @@ import and clean data set for problem 3 from data `accel_data`
 ``` r
 p3_df <- 
   read_csv(
-    "data/accel_data.csv",
-    col_types = cols(`day_id` = col_factor(ordered = TRUE))
+    "data/accel_data.csv"
   ) %>% 
   janitor::clean_names() %>% 
   rename(
@@ -441,7 +440,7 @@ p3_df <-
     values_to = "activity_in_minute"
   ) %>% 
   mutate(
-    minute_of_day = factor(minute_of_day, ordered = TRUE),
+    minute_of_day = as.numeric(minute_of_day),
     week_vs_weekend = ifelse(day %in% c("Sunday", "Saturday"), "weekend", "week")
   )
 ```
@@ -467,14 +466,110 @@ activity\_in\_minute, week\_vs\_weekend. The average activity count per
 minute is 267.0440592. Here is the examples of some observations
 
 | week | day | day\_of\_week | minute\_of\_day | activity\_in\_minute | week\_vs\_weekend |
-|-----:|:----|:--------------|:----------------|---------------------:|:------------------|
-|    1 | 1   | Friday        | 1               |             88.37778 | week              |
-|    1 | 1   | Friday        | 2               |             82.24444 | week              |
-|    1 | 1   | Friday        | 3               |             64.44444 | week              |
-|    1 | 1   | Friday        | 4               |             70.04444 | week              |
-|    1 | 1   | Friday        | 5               |             75.04444 | week              |
-|    1 | 1   | Friday        | 6               |             66.26667 | week              |
-|    1 | 1   | Friday        | 7               |             53.75556 | week              |
-|    1 | 1   | Friday        | 8               |             47.84444 | week              |
-|    1 | 1   | Friday        | 9               |             55.46667 | week              |
-|    1 | 1   | Friday        | 10              |             42.95556 | week              |
+|-----:|----:|:--------------|----------------:|---------------------:|:------------------|
+|    1 |   1 | Friday        |               1 |             88.37778 | week              |
+|    1 |   1 | Friday        |               2 |             82.24444 | week              |
+|    1 |   1 | Friday        |               3 |             64.44444 | week              |
+|    1 |   1 | Friday        |               4 |             70.04444 | week              |
+|    1 |   1 | Friday        |               5 |             75.04444 | week              |
+|    1 |   1 | Friday        |               6 |             66.26667 | week              |
+|    1 |   1 | Friday        |               7 |             53.75556 | week              |
+|    1 |   1 | Friday        |               8 |             47.84444 | week              |
+|    1 |   1 | Friday        |               9 |             55.46667 | week              |
+|    1 |   1 | Friday        |              10 |             42.95556 | week              |
+
+create a table showing a total activity variable for each day across
+minutes
+
+``` r
+p3_df %>% 
+  group_by(day) %>% 
+  summarise(
+    activity_in_day = sum(activity_in_minute)
+  ) %>% 
+  knitr::kable()
+```
+
+| day | activity\_in\_day |
+|----:|------------------:|
+|   1 |         480542.62 |
+|   2 |          78828.07 |
+|   3 |         376254.00 |
+|   4 |         631105.00 |
+|   5 |         355923.64 |
+|   6 |         307094.24 |
+|   7 |         340115.01 |
+|   8 |         568839.00 |
+|   9 |         295431.00 |
+|  10 |         607175.00 |
+|  11 |         422018.00 |
+|  12 |         474048.00 |
+|  13 |         423245.00 |
+|  14 |         440962.00 |
+|  15 |         467420.00 |
+|  16 |         685910.00 |
+|  17 |         382928.00 |
+|  18 |         467052.00 |
+|  19 |         371230.00 |
+|  20 |         381507.00 |
+|  21 |         468869.00 |
+|  22 |         154049.00 |
+|  23 |         409450.00 |
+|  24 |           1440.00 |
+|  25 |         260617.00 |
+|  26 |         340291.00 |
+|  27 |         319568.00 |
+|  28 |         434460.00 |
+|  29 |         620860.00 |
+|  30 |         389080.00 |
+|  31 |           1440.00 |
+|  32 |         138421.00 |
+|  33 |         549658.00 |
+|  34 |         367824.00 |
+|  35 |         445366.00 |
+
+Day2, day24 and day31 have the total activities that much lower than
+other days.  
+
+Make a single-panel plot that shows the 24-hour activity time courses
+for each day and use color to indicate day of the week.
+
+``` r
+p3_df %>% 
+  mutate(
+    hour_of_day = minute_of_day/60
+  ) %>% 
+  ggplot(aes(x = hour_of_day, 
+             y = activity_in_minute, 
+             group = day, 
+             color = day_of_week)) +
+  geom_point(alpha = .1) +
+  geom_line() +
+  labs(y = "activity count",
+       x = "hour of day",
+    title = "24-hour activity for each day ",
+    caption = "Data from accel_data",
+    colour = "day of week") +
+  scale_x_continuous(
+    breaks = 0:24
+  ) +
+  theme(
+    axis.text.x = element_text(size = 7),
+    axis.text.y = element_text(size = 7),
+    axis.title = element_text(size = 9),
+    plot.title = element_text(size = 12),
+    plot.caption = element_text(size = 5),
+    legend.title = element_text(size = 8),
+    legend.text = element_text(size = 7),
+    legend.key.size = unit(0.2, "cm")
+  ) +
+  guides(color = guide_legend(nrow = 1))
+```
+
+<img src="p8105_hw3_ry2417_files/figure-gfm/unnamed-chunk-14-1.png" width="90%" />
+
+From the plot, we can see that activity is extremely high during 7pm to
+10pm and moderately high between 6am to 12pm and 4pm to 5pm. The overall
+activity is more stable and lower on Tuesday than other days of week.
+There are high activity in the afternoon and evening on Friday and
+Saturday. The activity of Sunday is concentrated between 11am to 12 pm.
